# pqc-secure-transfer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_ENHANCED.md  RESEARCH_PAPER_CONTENT.md  SECURITY.md  deploy-free.sh  docker-compose.dev.yml  docker-compose.yml  init_github_repo.md  pyproject.toml  requirements.txt  setup.py  setup_github.bat  setup_github.sh  simple_demo.py  test-free-deployment.py  test-simple.ps1  test_comprehensive.ps1  test_config.py  test_simple_comprehensive.ps1  test_system.py
.github/workflows/: blue-green-deployment.yml  ci-cd.yml  ci.yml  rollback.yml  security-scan.yml
.kiro/specs/enhanced-cloud-deployment/: design.md  requirements.md  tasks.md
cloudformation/: pqc-ecs-stack.yaml  pqc-monitoring-stack.yaml
config/: __init__.py  base_config.py  config_manager.py  deployment_config.py  monitoring_config.py  security_config.py
config/cloud/: aws.yaml  azure.yaml  gcp.yaml
config/environments/: dev.yaml  prod.yaml  staging.yaml
deployment/: README.md  aws-ecs.md  azure-container-instances.md  digitalocean.md  free-deployment.md  google-cloud-run.md  kubernetes.md
examples/: basic_usage.py  client.py  federated_learning_demo.py  server.py  simple_server.py
kubernetes/base/: deployment.yaml  hpa.yaml
kubernetes/overlays/dev/: configmap-patch.yaml  deployment-patch.yaml  kustomization.yaml
monitoring/: alertmanager-config.yml  grafana-dashboard.json  health_checks.py  metrics.py  pqc_alerts.yml  pqc_metrics_integration.py  prometheus-config.yml  system_alerts.yml
pqc_secure_transfer/: __init__.py  hybrid_crypto.py  key_manager.py  secure_channel.py  streaming_encryptor.py
scaling/: autoscaler.py  cost_optimizer.py  predictive_scaler.py
scripts/: deploy.sh  health-check.sh  test-deployment.ps1
security/: audit_system.py  key_rotation.py  secret_manager.py
terraform/environments/dev/: main.tf  terraform.tfvars  variables.tf
terraform/environments/prod/: main.tf  terraform.tfvars  variables.tf
terraform/environments/staging/: main.tf  terraform.tfvars  variables.tf
terraform/modules/pqc-deployment/: aws.tf  azure.tf  gcp.tf  main.tf
terraform/modules/pqc-deployment/aws/: main.tf  outputs.tf  variables.tf
terraform/modules/pqc-deployment/azure/: main.tf  outputs.tf  variables.tf
terraform/modules/pqc-deployment/gcp/: main.tf  outputs.tf  variables.tf
terraform/modules/pqc-deployment/shared/: networking.tf
